--- a/app/src/main/res/layout/auth_activity_login.xml
+++ b/app/src/main/res/layout/auth_activity_login.xml
@@ -34,7 +34,7 @@
         android:inputType="textEmailAddress"
         android:layout_marginBottom="16dp"
         android:padding="12dp"
-        android:background="@android:drawable/edit_text" />
+        android:background="@drawable/comp_edittext" />
 
     <EditText
         android:id="@+id/et_password"
@@ -44,16 +44,16 @@
         android:inputType="textPassword"
         android:layout_marginBottom="24dp"
         android:padding="12dp"
-        android:background="@android:drawable/edit_text" />
+        android:background="@drawable/comp_edittext" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:backgroundTint="@color/primary"
+        android:backgroundTint="@null"
+        android:background="@drawable/comp_button_primary"
         android:textColor="#FFFFFF"
-        android:padding="12dp"
         android:layout_marginBottom="16dp"
         android:onClick="handleLogin"/>
 
