--- a/app/src/main/res/drawable/comp_edittext.xml
+++ b/app/src/main/res/drawable/comp_edittext.xml
@@ -1,6 +1,21 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@android:color/white" />
-    <stroke android:width="1dp" android:color="#CCCCCC" />
-    <corners android:radius="8dp" />
-</shape>
+<?xml version="1.0" encoding="utf-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle">
+            <solid android:color="#F2F2F2" />
+            <stroke android:width="1dp" android:color="#CCCCCC" />
+            <corners android:radius="8dp" />
+        </shape>
+    </item>
+
+    <!-- Enabled state (default) -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/white" />
+            <stroke android:width="1dp" android:color="#CCCCCC" />
+            <corners android:radius="8dp" />
+        </shape>
+    </item>
+
+</selector>
