Implement API Create Transaction

--- a/app/src/main/res/layout/fragment_news_create.xml
+++ b/app/src/main/res/layout/fragment_news_create.xml
@@ -4,11 +4,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- ===== Header strip ===== -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@color/primary"
+        android:padding="15dp">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_newspaper"
+            android:layout_marginEnd="8dp" />
+
+        <TextView
+            android:id="@+id/tv_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TAMBAH BERITA"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
     <!-- ================= Scrollable Content ================= -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:layout_marginTop="50dp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
