--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -79,6 +79,18 @@
                     android:layout_marginVertical="10dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_manage_transaction"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Kelola Transaksi"
+                    android:backgroundTint="@null"
+                    android:background="@drawable/comp_button_secondary"
+                    android:textColor="#FFFFFF"
+                    android:padding="12dp"
+                    android:layout_marginBottom="8dp"
+                    android:visibility="gone"/>
+
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_manage_user"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
